src/objects/Survey_Question__c.object
<CustomObject>
    <description>Object to store community survey questions.</description>
    <fields>
        <fullName>Question__c</fullName>
        <description>Field to store question title.</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field to store question type.</description>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Field to store picklist values</description>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <label>Survey Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>